// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Footer > renders default as expected 1`] = `
<div>
  <footer
    class="w-full bg-[#02051E]"
  >
    <div
      class="w-full py-8 px-5 min-[680px]:pt-10 min-[680px]:pb-[72px] min-[680px]:px-8 lg:pt-10 lg:pb-[72px] lg:px-12 xl:pt-10 xl:pb-[72px] xl:px-16 2xl:py-16 2xl:px-20"
    >
      <div
        class="max-w-screen-xl mx-auto"
      >
        <div
          class="lg:hidden mb-12"
        >
          <a
            href="/"
            tabindex="0"
          >
            <p
              class="w-48 h-6 text-size-lg text-white bluedot-p"
            >
              BlueDot Impact
            </p>
          </a>
        </div>
        <div
          class="flex flex-col gap-12 min-[680px]:hidden"
        >
          <div
            class="flex flex-col"
          >
            <h3
              class="text-white text-size-sm leading-[19px] mb-[15px] font-semibold"
            >
              BlueDot Impact
            </h3>
            <ul
              class="flex flex-col gap-[15px] list-none p-0"
            >
              <li>
                <a
                  class="bluedot-a not-prose text-size-sm leading-[19px] text-[#CCD7FF] hover:text-white no-underline font-normal"
                  href="/about"
                  tabindex="0"
                >
                  About us
                </a>
              </li>
              <li>
                <a
                  class="bluedot-a not-prose text-size-sm leading-[19px] text-[#CCD7FF] hover:text-white no-underline font-normal"
                  href="https://donate.stripe.com/5kA3fpgjpdJv6o89AA"
                  tabindex="0"
                >
                  Support us
                </a>
              </li>
              <li>
                <a
                  class="bluedot-a not-prose text-size-sm leading-[19px] text-[#CCD7FF] hover:text-white no-underline font-normal"
                  href="/join-us"
                  tabindex="0"
                >
                  Join us
                </a>
              </li>
              <li>
                <a
                  class="bluedot-a not-prose text-size-sm leading-[19px] text-[#CCD7FF] hover:text-white no-underline font-normal"
                  href="/contact"
                  tabindex="0"
                >
                  Contact us
                </a>
              </li>
            </ul>
          </div>
          <div
            class="flex flex-col"
          >
            <h3
              class="text-white text-size-sm leading-[19px] mb-[15px] font-semibold"
            >
              Explore
            </h3>
            <ul
              class="flex flex-col gap-[15px] list-none p-0"
            />
          </div>
          <div
            class="flex flex-col"
          >
            <h3
              class="text-white text-size-sm leading-[19px] mb-[15px] font-semibold"
            >
              Resources
            </h3>
            <ul
              class="flex flex-col gap-[15px] list-none p-0"
            >
              <li>
                <a
                  class="bluedot-a not-prose text-size-sm leading-[19px] text-[#CCD7FF] hover:text-white no-underline font-normal"
                  href="/blog"
                  tabindex="0"
                >
                  Blog
                </a>
              </li>
              <li>
                <a
                  class="bluedot-a not-prose text-size-sm leading-[19px] text-[#CCD7FF] hover:text-white no-underline font-normal"
                  href="https://luma.com/bluedotevents?utm_source=website&utm_campaign=footer"
                  rel="noopener noreferrer"
                  tabindex="0"
                  target="_blank"
                >
                  Events
                </a>
              </li>
              <li>
                <a
                  class="bluedot-a not-prose text-size-sm leading-[19px] text-[#CCD7FF] hover:text-white no-underline font-normal"
                  href="/privacy-policy"
                  tabindex="0"
                >
                  Privacy Policy
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="hidden min-[680px]:grid min-[680px]:grid-cols-2 min-[680px]:gap-12 lg:hidden"
        >
          <div
            class="flex flex-col"
          >
            <h3
              class="text-white text-size-sm leading-[19px] mb-[15px] font-semibold"
            >
              BlueDot Impact
            </h3>
            <ul
              class="flex flex-col gap-[15px] list-none p-0"
            >
              <li>
                <a
                  class="bluedot-a not-prose text-size-sm leading-[19px] text-[#CCD7FF] hover:text-white no-underline font-normal"
                  href="/about"
                  tabindex="0"
                >
                  About us
                </a>
              </li>
              <li>
                <a
                  class="bluedot-a not-prose text-size-sm leading-[19px] text-[#CCD7FF] hover:text-white no-underline font-normal"
                  href="https://donate.stripe.com/5kA3fpgjpdJv6o89AA"
                  tabindex="0"
                >
                  Support us
                </a>
              </li>
              <li>
                <a
                  class="bluedot-a not-prose text-size-sm leading-[19px] text-[#CCD7FF] hover:text-white no-underline font-normal"
                  href="/join-us"
                  tabindex="0"
                >
                  Join us
                </a>
              </li>
              <li>
                <a
                  class="bluedot-a not-prose text-size-sm leading-[19px] text-[#CCD7FF] hover:text-white no-underline font-normal"
                  href="/contact"
                  tabindex="0"
                >
                  Contact us
                </a>
              </li>
            </ul>
          </div>
          <div
            class="flex flex-col"
          >
            <h3
              class="text-white text-size-sm leading-[19px] mb-[15px] font-semibold"
            >
              Explore
            </h3>
            <ul
              class="flex flex-col gap-[15px] list-none p-0"
            />
          </div>
          <div
            class="flex flex-col"
          >
            <h3
              class="text-white text-size-sm leading-[19px] mb-[15px] font-semibold"
            >
              Resources
            </h3>
            <ul
              class="flex flex-col gap-[15px] list-none p-0"
            >
              <li>
                <a
                  class="bluedot-a not-prose text-size-sm leading-[19px] text-[#CCD7FF] hover:text-white no-underline font-normal"
                  href="/blog"
                  tabindex="0"
                >
                  Blog
                </a>
              </li>
              <li>
                <a
                  class="bluedot-a not-prose text-size-sm leading-[19px] text-[#CCD7FF] hover:text-white no-underline font-normal"
                  href="https://luma.com/bluedotevents?utm_source=website&utm_campaign=footer"
                  rel="noopener noreferrer"
                  tabindex="0"
                  target="_blank"
                >
                  Events
                </a>
              </li>
              <li>
                <a
                  class="bluedot-a not-prose text-size-sm leading-[19px] text-[#CCD7FF] hover:text-white no-underline font-normal"
                  href="/privacy-policy"
                  tabindex="0"
                >
                  Privacy Policy
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="hidden lg:flex lg:flex-row lg:justify-between lg:gap-8"
        >
          <div
            class="flex flex-col justify-between shrink-0"
          >
            <a
              href="/"
              tabindex="0"
            >
              <p
                class="w-48 h-6 text-size-lg text-white bluedot-p"
              >
                BlueDot Impact
              </p>
            </a>
            <div
              class="flex gap-6"
            >
              <a
                aria-label="Twitter"
                class="bluedot-a not-prose link-on-dark"
                href="https://twitter.com/BlueDotImpact"
                tabindex="0"
              >
                <svg
                  class="size-6"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z"
                  />
                </svg>
              </a>
              <a
                aria-label="YouTube"
                class="bluedot-a not-prose link-on-dark"
                href="https://youtube.com/@bluedotimpact"
                tabindex="0"
              >
                <svg
                  class="size-6"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 576 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M549.655 124.083c-6.281-23.65-24.787-42.276-48.284-48.597C458.781 64 288 64 288 64S117.22 64 74.629 75.486c-23.497 6.322-42.003 24.947-48.284 48.597-11.412 42.867-11.412 132.305-11.412 132.305s0 89.438 11.412 132.305c6.281 23.65 24.787 41.5 48.284 47.821C117.22 448 288 448 288 448s170.78 0 213.371-11.486c23.497-6.321 42.003-24.171 48.284-47.821 11.412-42.867 11.412-132.305 11.412-132.305s0-89.438-11.412-132.305zm-317.51 213.508V175.185l142.739 81.205-142.739 81.201z"
                  />
                </svg>
              </a>
              <a
                aria-label="LinkedIn"
                class="bluedot-a not-prose link-on-dark"
                href="https://www.linkedin.com/company/bluedotimpact/"
                tabindex="0"
              >
                <svg
                  class="size-6"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 448 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"
                  />
                </svg>
              </a>
            </div>
          </div>
          <div
            class="flex flex-col"
          >
            <h3
              class="text-white text-size-sm leading-[19px] mb-[15px] font-semibold"
            >
              BlueDot Impact
            </h3>
            <ul
              class="flex flex-col gap-[15px] list-none p-0"
            >
              <li>
                <a
                  class="bluedot-a not-prose text-size-sm leading-[19px] text-[#CCD7FF] hover:text-white no-underline font-normal"
                  href="/about"
                  tabindex="0"
                >
                  About us
                </a>
              </li>
              <li>
                <a
                  class="bluedot-a not-prose text-size-sm leading-[19px] text-[#CCD7FF] hover:text-white no-underline font-normal"
                  href="https://donate.stripe.com/5kA3fpgjpdJv6o89AA"
                  tabindex="0"
                >
                  Support us
                </a>
              </li>
              <li>
                <a
                  class="bluedot-a not-prose text-size-sm leading-[19px] text-[#CCD7FF] hover:text-white no-underline font-normal"
                  href="/join-us"
                  tabindex="0"
                >
                  Join us
                </a>
              </li>
              <li>
                <a
                  class="bluedot-a not-prose text-size-sm leading-[19px] text-[#CCD7FF] hover:text-white no-underline font-normal"
                  href="/contact"
                  tabindex="0"
                >
                  Contact us
                </a>
              </li>
            </ul>
          </div>
          <div
            class="flex flex-col"
          >
            <h3
              class="text-white text-size-sm leading-[19px] mb-[15px] font-semibold"
            >
              Explore
            </h3>
            <ul
              class="flex flex-col gap-[15px] list-none p-0"
            />
          </div>
          <div
            class="flex flex-col"
          >
            <h3
              class="text-white text-size-sm leading-[19px] mb-[15px] font-semibold"
            >
              Resources
            </h3>
            <ul
              class="flex flex-col gap-[15px] list-none p-0"
            >
              <li>
                <a
                  class="bluedot-a not-prose text-size-sm leading-[19px] text-[#CCD7FF] hover:text-white no-underline font-normal"
                  href="/blog"
                  tabindex="0"
                >
                  Blog
                </a>
              </li>
              <li>
                <a
                  class="bluedot-a not-prose text-size-sm leading-[19px] text-[#CCD7FF] hover:text-white no-underline font-normal"
                  href="https://luma.com/bluedotevents?utm_source=website&utm_campaign=footer"
                  rel="noopener noreferrer"
                  tabindex="0"
                  target="_blank"
                >
                  Events
                </a>
              </li>
              <li>
                <a
                  class="bluedot-a not-prose text-size-sm leading-[19px] text-[#CCD7FF] hover:text-white no-underline font-normal"
                  href="/privacy-policy"
                  tabindex="0"
                >
                  Privacy Policy
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="lg:hidden my-12"
        >
          <div
            class="flex gap-6"
          >
            <a
              aria-label="Twitter"
              class="bluedot-a not-prose link-on-dark"
              href="https://twitter.com/BlueDotImpact"
              tabindex="0"
            >
              <svg
                class="size-6"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z"
                />
              </svg>
            </a>
            <a
              aria-label="YouTube"
              class="bluedot-a not-prose link-on-dark"
              href="https://youtube.com/@bluedotimpact"
              tabindex="0"
            >
              <svg
                class="size-6"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 576 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M549.655 124.083c-6.281-23.65-24.787-42.276-48.284-48.597C458.781 64 288 64 288 64S117.22 64 74.629 75.486c-23.497 6.322-42.003 24.947-48.284 48.597-11.412 42.867-11.412 132.305-11.412 132.305s0 89.438 11.412 132.305c6.281 23.65 24.787 41.5 48.284 47.821C117.22 448 288 448 288 448s170.78 0 213.371-11.486c23.497-6.321 42.003-24.171 48.284-47.821 11.412-42.867 11.412-132.305 11.412-132.305s0-89.438-11.412-132.305zm-317.51 213.508V175.185l142.739 81.205-142.739 81.201z"
                />
              </svg>
            </a>
            <a
              aria-label="LinkedIn"
              class="bluedot-a not-prose link-on-dark"
              href="https://www.linkedin.com/company/bluedotimpact/"
              tabindex="0"
            >
              <svg
                class="size-6"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 448 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"
                />
              </svg>
            </a>
          </div>
        </div>
        <div
          class="text-size-sm text-[#CCD7FF] leading-[26px] min-[680px]:mt-0 lg:mt-12 2xl:mt-[64px]"
        >
          <div>
            <span>
              © 
              2025
              . 
              <a
                class="bluedot-a not-prose text-[#CCD7FF] hover:text-white"
                href="https://bluedot.org/"
                tabindex="0"
              >
                BlueDot Impact
              </a>
               operates as:
            </span>
            <ul
              class="list-none pl-0 mt-2 mb-2"
            >
              <li>
                - BlueDot Impact Ltd: UK CLG, company number: 
                <a
                  class="bluedot-a not-prose text-[#CCD7FF] hover:text-white"
                  href="https://find-and-update.company-information.service.gov.uk/company/14964572"
                  tabindex="0"
                >
                  14964572
                </a>
              </li>
              <li>
                - BlueDot Impact US Inc: 501(c)3, EIN: 
                <a
                  class="bluedot-a not-prose text-[#CCD7FF] hover:text-white"
                  href="https://projects.propublica.org/nonprofits/organizations/994885308"
                  tabindex="0"
                >
                  99-4885308
                </a>
              </li>
            </ul>
            <p
              class="mt-2 mb-2"
            >
              Funded by 
              <a
                class="bluedot-a not-prose text-[#CCD7FF] hover:text-white"
                href="https://www.coefficientgiving.org/"
                tabindex="0"
              >
                Coefficient Giving
              </a>
              .
            </p>
            <p
              class="mt-2"
            >
              US Address: 1680 Mission St. Suite 411, San Francisco, CA 94103
            </p>
          </div>
        </div>
      </div>
    </div>
  </footer>
</div>
`;

exports[`Footer > renders with optional args 1`] = `
<div>
  <footer
    class="w-full bg-[#02051E]"
  >
    <div
      class="w-full py-8 px-5 min-[680px]:pt-10 min-[680px]:pb-[72px] min-[680px]:px-8 lg:pt-10 lg:pb-[72px] lg:px-12 xl:pt-10 xl:pb-[72px] xl:px-16 2xl:py-16 2xl:px-20"
    >
      <div
        class="max-w-screen-xl mx-auto"
      >
        <div
          class="lg:hidden mb-12"
        >
          <a
            href="/"
            tabindex="0"
          >
            <img
              alt="BlueDot Impact Logo"
              class="w-48 h-6"
              src="https://www.bluedot.com/test-logo.jpg"
            />
          </a>
        </div>
        <div
          class="flex flex-col gap-12 min-[680px]:hidden"
        >
          <div
            class="flex flex-col"
          >
            <h3
              class="text-white text-size-sm leading-[19px] mb-[15px] font-semibold"
            >
              BlueDot Impact
            </h3>
            <ul
              class="flex flex-col gap-[15px] list-none p-0"
            >
              <li>
                <a
                  class="bluedot-a not-prose text-size-sm leading-[19px] text-[#CCD7FF] hover:text-white no-underline font-normal"
                  href="/about"
                  tabindex="0"
                >
                  About us
                </a>
              </li>
              <li>
                <a
                  class="bluedot-a not-prose text-size-sm leading-[19px] text-[#CCD7FF] hover:text-white no-underline font-normal"
                  href="https://donate.stripe.com/5kA3fpgjpdJv6o89AA"
                  tabindex="0"
                >
                  Support us
                </a>
              </li>
              <li>
                <a
                  class="bluedot-a not-prose text-size-sm leading-[19px] text-[#CCD7FF] hover:text-white no-underline font-normal"
                  href="/join-us"
                  tabindex="0"
                >
                  Join us
                </a>
              </li>
              <li>
                <a
                  class="bluedot-a not-prose text-size-sm leading-[19px] text-[#CCD7FF] hover:text-white no-underline font-normal"
                  href="/contact"
                  tabindex="0"
                >
                  Contact us
                </a>
              </li>
            </ul>
          </div>
          <div
            class="flex flex-col"
          >
            <h3
              class="text-white text-size-sm leading-[19px] mb-[15px] font-semibold"
            >
              Explore
            </h3>
            <ul
              class="flex flex-col gap-[15px] list-none p-0"
            />
          </div>
          <div
            class="flex flex-col"
          >
            <h3
              class="text-white text-size-sm leading-[19px] mb-[15px] font-semibold"
            >
              Resources
            </h3>
            <ul
              class="flex flex-col gap-[15px] list-none p-0"
            >
              <li>
                <a
                  class="bluedot-a not-prose text-size-sm leading-[19px] text-[#CCD7FF] hover:text-white no-underline font-normal"
                  href="/blog"
                  tabindex="0"
                >
                  Blog
                </a>
              </li>
              <li>
                <a
                  class="bluedot-a not-prose text-size-sm leading-[19px] text-[#CCD7FF] hover:text-white no-underline font-normal"
                  href="https://luma.com/bluedotevents?utm_source=website&utm_campaign=footer"
                  rel="noopener noreferrer"
                  tabindex="0"
                  target="_blank"
                >
                  Events
                </a>
              </li>
              <li>
                <a
                  class="bluedot-a not-prose text-size-sm leading-[19px] text-[#CCD7FF] hover:text-white no-underline font-normal"
                  href="/privacy-policy"
                  tabindex="0"
                >
                  Privacy Policy
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="hidden min-[680px]:grid min-[680px]:grid-cols-2 min-[680px]:gap-12 lg:hidden"
        >
          <div
            class="flex flex-col"
          >
            <h3
              class="text-white text-size-sm leading-[19px] mb-[15px] font-semibold"
            >
              BlueDot Impact
            </h3>
            <ul
              class="flex flex-col gap-[15px] list-none p-0"
            >
              <li>
                <a
                  class="bluedot-a not-prose text-size-sm leading-[19px] text-[#CCD7FF] hover:text-white no-underline font-normal"
                  href="/about"
                  tabindex="0"
                >
                  About us
                </a>
              </li>
              <li>
                <a
                  class="bluedot-a not-prose text-size-sm leading-[19px] text-[#CCD7FF] hover:text-white no-underline font-normal"
                  href="https://donate.stripe.com/5kA3fpgjpdJv6o89AA"
                  tabindex="0"
                >
                  Support us
                </a>
              </li>
              <li>
                <a
                  class="bluedot-a not-prose text-size-sm leading-[19px] text-[#CCD7FF] hover:text-white no-underline font-normal"
                  href="/join-us"
                  tabindex="0"
                >
                  Join us
                </a>
              </li>
              <li>
                <a
                  class="bluedot-a not-prose text-size-sm leading-[19px] text-[#CCD7FF] hover:text-white no-underline font-normal"
                  href="/contact"
                  tabindex="0"
                >
                  Contact us
                </a>
              </li>
            </ul>
          </div>
          <div
            class="flex flex-col"
          >
            <h3
              class="text-white text-size-sm leading-[19px] mb-[15px] font-semibold"
            >
              Explore
            </h3>
            <ul
              class="flex flex-col gap-[15px] list-none p-0"
            />
          </div>
          <div
            class="flex flex-col"
          >
            <h3
              class="text-white text-size-sm leading-[19px] mb-[15px] font-semibold"
            >
              Resources
            </h3>
            <ul
              class="flex flex-col gap-[15px] list-none p-0"
            >
              <li>
                <a
                  class="bluedot-a not-prose text-size-sm leading-[19px] text-[#CCD7FF] hover:text-white no-underline font-normal"
                  href="/blog"
                  tabindex="0"
                >
                  Blog
                </a>
              </li>
              <li>
                <a
                  class="bluedot-a not-prose text-size-sm leading-[19px] text-[#CCD7FF] hover:text-white no-underline font-normal"
                  href="https://luma.com/bluedotevents?utm_source=website&utm_campaign=footer"
                  rel="noopener noreferrer"
                  tabindex="0"
                  target="_blank"
                >
                  Events
                </a>
              </li>
              <li>
                <a
                  class="bluedot-a not-prose text-size-sm leading-[19px] text-[#CCD7FF] hover:text-white no-underline font-normal"
                  href="/privacy-policy"
                  tabindex="0"
                >
                  Privacy Policy
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="hidden lg:flex lg:flex-row lg:justify-between lg:gap-8"
        >
          <div
            class="flex flex-col justify-between shrink-0"
          >
            <a
              href="/"
              tabindex="0"
            >
              <img
                alt="BlueDot Impact Logo"
                class="w-48 h-6"
                src="https://www.bluedot.com/test-logo.jpg"
              />
            </a>
            <div
              class="flex gap-6"
            >
              <a
                aria-label="Twitter"
                class="bluedot-a not-prose link-on-dark"
                href="https://twitter.com/BlueDotImpact"
                tabindex="0"
              >
                <svg
                  class="size-6"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z"
                  />
                </svg>
              </a>
              <a
                aria-label="YouTube"
                class="bluedot-a not-prose link-on-dark"
                href="https://youtube.com/@bluedotimpact"
                tabindex="0"
              >
                <svg
                  class="size-6"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 576 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M549.655 124.083c-6.281-23.65-24.787-42.276-48.284-48.597C458.781 64 288 64 288 64S117.22 64 74.629 75.486c-23.497 6.322-42.003 24.947-48.284 48.597-11.412 42.867-11.412 132.305-11.412 132.305s0 89.438 11.412 132.305c6.281 23.65 24.787 41.5 48.284 47.821C117.22 448 288 448 288 448s170.78 0 213.371-11.486c23.497-6.321 42.003-24.171 48.284-47.821 11.412-42.867 11.412-132.305 11.412-132.305s0-89.438-11.412-132.305zm-317.51 213.508V175.185l142.739 81.205-142.739 81.201z"
                  />
                </svg>
              </a>
              <a
                aria-label="LinkedIn"
                class="bluedot-a not-prose link-on-dark"
                href="https://www.linkedin.com/company/bluedotimpact/"
                tabindex="0"
              >
                <svg
                  class="size-6"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 448 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"
                  />
                </svg>
              </a>
            </div>
          </div>
          <div
            class="flex flex-col"
          >
            <h3
              class="text-white text-size-sm leading-[19px] mb-[15px] font-semibold"
            >
              BlueDot Impact
            </h3>
            <ul
              class="flex flex-col gap-[15px] list-none p-0"
            >
              <li>
                <a
                  class="bluedot-a not-prose text-size-sm leading-[19px] text-[#CCD7FF] hover:text-white no-underline font-normal"
                  href="/about"
                  tabindex="0"
                >
                  About us
                </a>
              </li>
              <li>
                <a
                  class="bluedot-a not-prose text-size-sm leading-[19px] text-[#CCD7FF] hover:text-white no-underline font-normal"
                  href="https://donate.stripe.com/5kA3fpgjpdJv6o89AA"
                  tabindex="0"
                >
                  Support us
                </a>
              </li>
              <li>
                <a
                  class="bluedot-a not-prose text-size-sm leading-[19px] text-[#CCD7FF] hover:text-white no-underline font-normal"
                  href="/join-us"
                  tabindex="0"
                >
                  Join us
                </a>
              </li>
              <li>
                <a
                  class="bluedot-a not-prose text-size-sm leading-[19px] text-[#CCD7FF] hover:text-white no-underline font-normal"
                  href="/contact"
                  tabindex="0"
                >
                  Contact us
                </a>
              </li>
            </ul>
          </div>
          <div
            class="flex flex-col"
          >
            <h3
              class="text-white text-size-sm leading-[19px] mb-[15px] font-semibold"
            >
              Explore
            </h3>
            <ul
              class="flex flex-col gap-[15px] list-none p-0"
            />
          </div>
          <div
            class="flex flex-col"
          >
            <h3
              class="text-white text-size-sm leading-[19px] mb-[15px] font-semibold"
            >
              Resources
            </h3>
            <ul
              class="flex flex-col gap-[15px] list-none p-0"
            >
              <li>
                <a
                  class="bluedot-a not-prose text-size-sm leading-[19px] text-[#CCD7FF] hover:text-white no-underline font-normal"
                  href="/blog"
                  tabindex="0"
                >
                  Blog
                </a>
              </li>
              <li>
                <a
                  class="bluedot-a not-prose text-size-sm leading-[19px] text-[#CCD7FF] hover:text-white no-underline font-normal"
                  href="https://luma.com/bluedotevents?utm_source=website&utm_campaign=footer"
                  rel="noopener noreferrer"
                  tabindex="0"
                  target="_blank"
                >
                  Events
                </a>
              </li>
              <li>
                <a
                  class="bluedot-a not-prose text-size-sm leading-[19px] text-[#CCD7FF] hover:text-white no-underline font-normal"
                  href="/privacy-policy"
                  tabindex="0"
                >
                  Privacy Policy
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="lg:hidden my-12"
        >
          <div
            class="flex gap-6"
          >
            <a
              aria-label="Twitter"
              class="bluedot-a not-prose link-on-dark"
              href="https://twitter.com/BlueDotImpact"
              tabindex="0"
            >
              <svg
                class="size-6"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z"
                />
              </svg>
            </a>
            <a
              aria-label="YouTube"
              class="bluedot-a not-prose link-on-dark"
              href="https://youtube.com/@bluedotimpact"
              tabindex="0"
            >
              <svg
                class="size-6"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 576 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M549.655 124.083c-6.281-23.65-24.787-42.276-48.284-48.597C458.781 64 288 64 288 64S117.22 64 74.629 75.486c-23.497 6.322-42.003 24.947-48.284 48.597-11.412 42.867-11.412 132.305-11.412 132.305s0 89.438 11.412 132.305c6.281 23.65 24.787 41.5 48.284 47.821C117.22 448 288 448 288 448s170.78 0 213.371-11.486c23.497-6.321 42.003-24.171 48.284-47.821 11.412-42.867 11.412-132.305 11.412-132.305s0-89.438-11.412-132.305zm-317.51 213.508V175.185l142.739 81.205-142.739 81.201z"
                />
              </svg>
            </a>
            <a
              aria-label="LinkedIn"
              class="bluedot-a not-prose link-on-dark"
              href="https://www.linkedin.com/company/bluedotimpact/"
              tabindex="0"
            >
              <svg
                class="size-6"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 448 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"
                />
              </svg>
            </a>
          </div>
        </div>
        <div
          class="text-size-sm text-[#CCD7FF] leading-[26px] min-[680px]:mt-0 lg:mt-12 2xl:mt-[64px]"
        >
          <div>
            <span>
              © 
              2025
              . 
              <a
                class="bluedot-a not-prose text-[#CCD7FF] hover:text-white"
                href="https://bluedot.org/"
                tabindex="0"
              >
                BlueDot Impact
              </a>
               operates as:
            </span>
            <ul
              class="list-none pl-0 mt-2 mb-2"
            >
              <li>
                - BlueDot Impact Ltd: UK CLG, company number: 
                <a
                  class="bluedot-a not-prose text-[#CCD7FF] hover:text-white"
                  href="https://find-and-update.company-information.service.gov.uk/company/14964572"
                  tabindex="0"
                >
                  14964572
                </a>
              </li>
              <li>
                - BlueDot Impact US Inc: 501(c)3, EIN: 
                <a
                  class="bluedot-a not-prose text-[#CCD7FF] hover:text-white"
                  href="https://projects.propublica.org/nonprofits/organizations/994885308"
                  tabindex="0"
                >
                  99-4885308
                </a>
              </li>
            </ul>
            <p
              class="mt-2 mb-2"
            >
              Funded by 
              <a
                class="bluedot-a not-prose text-[#CCD7FF] hover:text-white"
                href="https://www.coefficientgiving.org/"
                tabindex="0"
              >
                Coefficient Giving
              </a>
              .
            </p>
            <p
              class="mt-2"
            >
              US Address: 1680 Mission St. Suite 411, San Francisco, CA 94103
            </p>
          </div>
        </div>
      </div>
    </div>
  </footer>
</div>
`;
